--- a/css/estilos_especial.css
+++ b/css/estilos_especial.css
@@ -17,6 +17,7 @@
     align-items: center;
     flex-wrap: wrap;
 
+
 }
 
 .container .card {
@@ -47,6 +48,7 @@
     flex-direction: column;
     padding: 20px;
     transition: 0.5s ease-in-out;
+
 }
 .container .card:hover .imgBox {
     transform: translateY(-100px);
@@ -128,4 +130,32 @@
     cursor: pointer;
     background: #9bdc28;
     transform: scale(1.1);
+}
+
+.container .card .imgBox2 {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    transition: 0.5s ease-in-out;
+    background: #FFFAFA;
+}
+.container .card .imgBox2 img {
+    max-width: 100%;
+    margin: 0 0 20px;
+    transition: 0.5s ease-in-out;
+}
+
+.container .card:hover .imgBox2 img {
+    transform: translate(-40px, -60px) rotate(-20deg) scale(1.4);
+}
+
+.container .card .imgBox2 h2 {
+    color: #fff;
+    font-weight: 600;
+    margin-bottom: 100px;
 }
